--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "billid-poc-services",
+  "name": "poc-services",
   "version": "1.0.0",
   "authors": [
     "ritesh"
@@ -21,7 +21,7 @@
     "angular-moment": "~0.10.0",
     "a0-angular-storage": "0.0.11"
   },
-  "homepage": "https://github.com/billidin/billid-poc-services",
+  "homepage": "https://github.com/billidin/poc-services",
   "ignore": [
     "**/.*",
     "node_modules",
