--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-uglify": "~0.4.0",
-    "grunt-copy": "^0.1.0",
     "load-grunt-tasks": "~0.4.0"
   },
   "main": "dist/services.js"
